k8s/mongod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: mongod
  name: mongod
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongod
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/quack-default: "true"
        io.kompose.service: mongod
    spec:
      containers:
        - image: mongo:5
          name: mongod
          ports:
            - containerPort: 27017
              protocol: TCP
      restartPolicy: Always
