k8s/quack-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: mongod
  name: quack-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongod
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/quack-default: "true"
        io.kompose.service: mongod
    spec:
      containers:
        - image: mongo:5
          name: quack-db
          volumeMounts:
            - mountPath: /data/db
              name: quack-db-data
          ports:
            - containerPort: 27017
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: quack-db-data
          persistentVolumeClaim:
            claimName: quack-db-data
