k8s/mongod-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: mongod
  name: mongod
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongod
