k8s/quack-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: quack
  name: quack
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 80
  selector:
    io.kompose.service: quack
